# ascii-challenge

./: README.md
darrell/: CHANGELOG.md  LICENSE  Main.hs  Movie.hs  README.md  Sprites.hs  ascii-art.cabal
donald/: .gitignore  README.md  pixar_ascii_final.mp4.mov  vid2asc.py
roie/: README.md
