cabal-version:       2.4
name:                ascii-art
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Darrell Lewis-Sandy
maintainer:          dlewissandy@gmail.com
category:            Graphics
extra-source-files:  CHANGELOG.md, README.md

executable ascii-art
  main-is:             Main.hs
  other-modules:       Sprites.hs, Movie.hs
  build-depends:       base ^>=4.12.0.0, ansi-terminal ^>=0.9
  default-language:    Haskell2010
